DAY-14/onlinetrainingapp-withdocker/configs/k8s/courses-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: courses
spec:
  containers:
    - name: courses
      image: courses:latest
      imagePullPolicy: Never
