DAY-14/onlinetrainingapp-withdocker/configs/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: auth:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv-cl-ip
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3003
      targetPort: 3003
