DAY-14/onlinetrainingapp-withdocker/configs/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: client:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv-cl-ip
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 4000
      targetPort: 4000
