DAY-14/onlinetrainingapp-withdocker/configs/k8s/courses-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: courses-srv
spec:
  selector:
    app.kubernetes.io/name: courses
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
