DAY-14/onlinetrainingapp-withdocker/configs/k8s/reviews-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
    spec:
      containers:
        - name: reviews
          image: reviews:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-srv-cl-ip
spec:
  selector:
    app: reviews
  ports:
    - name: reviews
      protocol: TCP
      port: 3001
      targetPort: 3001
