DAY-14/onlinetrainingapp-withdocker/configs/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: onlinetraining.com
      http:
        paths:
          - path: /newcourse
            pathType: Prefix
            backend:
              service:
                name: courses-srv-cl-ip
                port:
                  number: 3000
          - path: /courses/?(.*)/newreview
            pathType: Prefix
            backend:
              service:
                name: reviews-srv-cl-ip
                port:
                  number: 3001
          - path: /courses
            pathType: Prefix
            backend:
              service:
                name: query-srv-cl-ip
                port:
                  number: 3002
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv-cl-ip
                port:
                  number: 3003
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv-cl-ip
                port:
                  number: 4000
